@@ -204,6 +204,7 @@ export(elltanc)
 export(esac)
 export(expandModelData)
 export(fillin)
+export(fix_xy)
 export(ga)
 export(gd)
 export(gd_)
@@ -326,6 +327,7 @@ export(waldf)
 export(waldx)
 export(wtd_mean)
 export(xqplot)
+export(xqplot_)
 export(years)
 export(yscale.components.log100real)
 importFrom(magrittr,"%>%")
