@@ -122,7 +122,7 @@
 #' of the discontinuity, the smoothness vector for the corresponding knot would have the 
 #' value \code{c(1,2)}, thus leaving the value (denoted by 0) unconstrained.
 #' @param periodic if TRUE a periodic spline is generated on the base interval
-#' [0,max(knots)]. A constraint is generated so that the coefficients generate, in effect,
+#' `[0,max(knots)]`. A constraint is generated so that the coefficients generate, in effect,
 #' the same fitted values and derivatives to the right of max(knots) as they do to the right of 0.
 #' Note that all knots must be strictly positive. Since the knot at 0 corresponds to the
 #' knot at 'max(knots)', the knot at 0 must not be explicitly specified. Note also that the
