@@ -2,6 +2,7 @@
 % Please edit documentation in R/graphics.R
 \name{xqplot}
 \alias{xqplot}
+\alias{xqplot_}
 \title{Extended Quantile Plots}
 \usage{
 xqplot(
@@ -14,6 +15,27 @@ xqplot(
   mcex = 0.8,
   maxlab = 12,
   debug = isTRUE(options("debug")),
+  mar = c(4, 2.5, 4, 1),
+  xlab.pos = 2,
+  xlab.cex = 0.7,
+  sublab.pos = xlab.pos + xlab.cex * 1.15,
+  text.cex.factor = 1,
+  left.labs = F,
+  class = TRUE,
+  xaxs = "i",
+  maxvarnamelength = 20
+)
+
+xqplot_(
+  x,
+  ptype = "quantile",
+  labels = names(x),
+  ...,
+  mfrow = findmfrow(length(x)),
+  ask = FALSE,
+  mcex = 0.8,
+  maxlab = 12,
+  debug = F,
   mar = c(4, 2.5, 4, 1),
   xlab.pos = 2,
   xlab.cex = 0.7,
@@ -72,6 +94,11 @@ plot for numerical varibles and barcharts for factors. Quantile plots also
 show a horizontal line at the position of the mean and at mean plus or minus
 one standard deviation.
 }
+\section{Functions}{
+\itemize{
+\item \code{xqplot_()}: experimental version to handle data.frames with list elements
+
+}}
 \note{
 Bugs:
 'mfrow' should take the total number of variables into account if they will
@@ -94,4 +121,8 @@ qqPlot(Prestige$income)
 qqPlot(Prestige$income, distribution = 'exp')
 qqPlot(Prestige$income, distribution = 'unif')
 
+dd <- data.frame(x = 1:10, y = rnorm(10))
+dd$listvar <- list(1,'A',2,4,5,6,7,8,9,10)
+dd
+xqplot_(dd)
 }
